# moderapi-replay

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  TODOS.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  parity-check.yml  publish.yml
docs/: data-acquisition-plan.md
scripts/: generate_dataset.py
src/moderapi/: __init__.py  calibration.py  cli.py  comparison.py  estimator.py  exceptions.py  inference.py  models.py  parser.py  report.py  server.py  tui.py
tests/: conftest.py  test_calibration.py  test_cli.py  test_comparison.py  test_estimator.py  test_exceptions.py  test_models.py  test_parity.py  test_parser.py  test_report.py
tests/fixtures/: calibration_sample.jsonl  small_sample.jsonl
