[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "moderapi-replay"
version = "0.1.0"
description = "Validate your Perspective API moderation thresholds still work with Detoxify"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Vyblor" },
]
keywords = ["moderation", "perspective-api", "toxicity", "content-moderation", "detoxify"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "detoxify>=0.5.2",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
]
tui = [
    "textual>=0.40.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
all = [
    "moderapi-replay[server,tui,dev]",
]

[project.scripts]
moderapi-replay = "moderapi.cli:app"

[project.urls]
Homepage = "https://github.com/Vyblor/moderapi-replay"
Repository = "https://github.com/Vyblor/moderapi-replay"
Issues = "https://github.com/Vyblor/moderapi-replay/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/moderapi"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
per-file-ignores = {"src/moderapi/models.py" = ["N815"]}
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["detoxify.*", "sklearn.*", "scipy.*", "textual.*", "uvicorn.*"]
ignore_missing_imports = true
